--- a/docroot/themes/iucn_who/less/theme/sidemenu.less
+++ b/docroot/themes/iucn_who/less/theme/sidemenu.less
@@ -90,6 +90,9 @@
   right: 0;
   top: 0;
   width: 1em;
+  & + .region {
+    border-top: none;
+  }
   &:hover, &:focus {
     color: @iucn-blue-dark;
     opacity: 1;
